# laputa-py

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  TODOLIST.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: assign.yml  codeql.yml  docs.yml  greetings.yml  labeler.yml  lock.yml  mirror.yml  notify.yml  python-package.yml  release.yml  scorecard.yml  stale.yml
docs/: README.md
docs/architecture/: laputa-hermes-architecture.md  laputa-py-final-architecture.md  laputa-python-implementation-plan.md
docs/baseline/: LAPUTA.md  MENTLE.md
docs/legacy/: 2026-03-26-agent-diva-integrated-memory-design.md  laputa-new-architecture.md  mentle-early-snapshot.md  mentle-feature-build-env.md  mentle-laputa-memory-role-decision.md  mentle-runtime-assembly.md  mentle-tool-selection-and-gui-controls.md
docs/prds/: reconcile-auto-evolution.md  reconcile-laputa-new-architecture.md  reconcile-laputa-v006.md  reconcile-mentle-laputa.md  review-adversarial.md  review-edge-case.md  review-rubric.md
docs/research/: alife-harness-gap-inventory.md  alife-harness-overview.md  harness-engineering-three-way-comparison.md  harness-engineering-three-way-detailed-checklist.md  hermes-harness-overview.md
src/laputa/: __init__.py  atomic.py  cli.py  error.py  layout.py  lock.py  metrics.py  (+6 more)
tests/: __init__.py  test_changelog.py  test_governance.py  test_section_write.py  test_service.py  test_types.py
