[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "laputa-py"
version = "0.1.0"
description = "Pure Python Laputa governance layer for AI agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/mastwet/laputa-py"
Repository = "https://github.com/mastwet/laputa-py"
Issues = "https://github.com/mastwet/laputa-py/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[tool.hatch.build.targets.wheel]
packages = ["src/laputa"]

[tool.pytest.ini_options]
testpaths = ["tests"]
